Added partials and user model

--- a/views/main/landing.hbs
+++ b/views/main/landing.hbs
@@ -1,4 +1,6 @@
 <div class="headline">
     <h1>Join and Post your Favorite Tweets</h1>
-    <p class="lead">Sign up now and enjoy a new social experience.</p>
+    <p class="lead">Sign up now and enjoy an awesome new social experience.</p>
+    <a href="#" class="btn btn-primary">Login</a>
+    <a href="#" class="btn btn-primary">Register</a>
 </div>
