--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="#">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
+                <a class="nav-link" href="/register">Register</a>
             </li>
         </ul>
     </div>
