--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,12 +6,18 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
-            </li>
+            {{#if user}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/">{{ user.name }}</a>
+                </li>
+            {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+            {{/if}}
         </ul>
     </div>
 </nav>
