--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,9 +7,15 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav ml-auto">
             {{#if user}}
-                <li class="nav-item">
-                    <a class="nav-link" href="/">{{ user.name }}</a>
-                </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ user.name }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                    <a class="dropdown-item" href="#">Profile</a>
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                </div>
+            </li>
             {{else}}
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
