Added tweet model and post tweet feature

--- a/views/main/home.hbs
+++ b/views/main/home.hbs
@@ -3,17 +3,17 @@
 </div>
 <div class="row justify-content-center">
     <div class="col-xs-12 col-md-6">
-        <form id="sendTweet">
+        <form>
             <div class="form-group">
-                <textarea id="tweet" class="form-control" cols="15" rows="5"></textarea>                
+                <input id="tweet" class="form-control" type="text"></input>                
             </div>
-            <button class="btn btn-primary">Tweet</button>
+            <button id="sendTweet" class="btn btn-primary" type="submit">Tweet</button>
         </form>
         <br>
         <div id="tweets">
             <div class="card">
                 <div class="card-body d-flex align-items-center">
-                    <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="50" width="50" alt="">
+                    <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="75" width="75" alt="">
                     <div class="ml-3">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
