--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -33,6 +33,7 @@
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/moment.min.js"></script>
     <script src="/js/custom.js"></script>
   </body>
 </html>
