--- a/views/main/home.hbs
+++ b/views/main/home.hbs
@@ -11,15 +11,18 @@
         </form>
         <br>
         <div id="tweets">
-            <div class="card">
+        {{#each tweets}}
+            <div class="card mb-3">
                 <div class="card-body d-flex align-items-center">
                     <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="75" width="75" alt="">
                     <div class="ml-3">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title">{{ author.name }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">{{date created 'MMM Do YYYY' }}</h6>
+                        <p class="card-text">{{ content }}</p>
                     </div>
                 </div>
             </div>
+        {{/each}}
         </div>
     </div>
 </div>
