--- a/views/account/register.hbs
+++ b/views/account/register.hbs
@@ -1,7 +1,7 @@
 <div class="row justify-content-center mt-3">
     <div class="col-xs-12 col-md-4">
         <h1 class="mb-4">Register Account</h1>
-        <form action="/register" method="POST">
+        <form action="/user/register" method="POST">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input 
