--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,8 +12,8 @@
                 {{ user.name }}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Profile</a>
-                    <a class="dropdown-item" href="/logout">Logout</a>
+                    <a class="dropdown-item" href="/user/{{ user.id }}">Profile</a>
+                    <a class="dropdown-item" href="/user/logout">Logout</a>
                 </div>
             </li>
             {{else}}
