--- a/views/account/register.hbs
+++ b/views/account/register.hbs
@@ -1,12 +1,25 @@
 <div class="row justify-content-center mt-3">
     <div class="col-xs-12 col-md-4">
         <h1 class="mb-4">Register Account</h1>
-        <form action="/user/register" method="POST">
+        <form action="/user/register" method="POST" enctype="multipart/form-data">
+            <canvas class="canvas"></canvas>
+            <div class="form-group">
+                <div class="custom-file">
+                    <input type="file" required id="upload-file" name="profilePic" class="custom-file-input {{#if errors.email}} invalid {{/if}}" accept="image/*">
+                    <label for="upload-file" class="custom-file-label">Choose Profile Picture</label>
+                </div>
+                {{#each errors.profilePic}}
+                    <div>
+                        <span class="text-danger">{{ message }}</span>
+                    </div>
+                {{/each}}
+            </div>
             <div class="form-group">
                 <label for="name">Name</label>
                 <input 
                 name="name" 
                 type="text"
+                required
                 value="{{form.name}}" 
                 id="name"
                 class="form-control {{#if errors.name}} invalid {{/if}}"> 
@@ -21,6 +34,7 @@
                 <input 
                 name="email" 
                 type="email"
+                required
                 id="email" 
                 value="{{form.email}}"
                 class="form-control {{#if errors.email}} invalid {{/if}}"> 
@@ -35,6 +49,7 @@
                 <input 
                 name="password" 
                 type="password"
+                required
                 id="password"
                 value="{{form.password}}" 
                 class="form-control {{#if errors.password}} invalid {{/if}}">
@@ -48,7 +63,8 @@
                 <label for="confirmPassword">Confirm Password</label>
                 <input 
                 name="confirmPassword" 
-                type="password" 
+                type="password"
+                required 
                 id="confirmPassword"
                 value="{{form.confirmPassword}}"
                 class="form-control {{#if errors.confirmPassword}} invalid {{/if}}">
@@ -58,7 +74,7 @@
                     </div>
                 {{/each}}
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary mb-3">Register</button>
         </form>
     </div>
 </div>
