Added update profile feature and fixed some bugs

--- a/views/main/home.hbs
+++ b/views/main/home.hbs
@@ -7,7 +7,7 @@
             <div class="form-group">
                 <input id="tweet" class="form-control" type="text"></input>                
             </div>
-            <button id="sendTweet" class="btn btn-primary" type="submit">Tweet</button>
+            <button id="sendTweet" class="btn btn-primary" type="submit">Post Tweet</button>
         </form>
         <br>
         <div id="tweets">
