--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,15 @@ body {
   border-radius: 50%;
   width: 150px;
   height: 150px;
+  display: none;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+.profile-pic{
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
