--- a/views/account/login.hbs
+++ b/views/account/login.hbs
@@ -10,7 +10,7 @@
         {{/if}}
         {{> shared/success}}
         <h1 class="mb-4">Login</h1>
-        <form action="/user/login" method="POST">
+        <form action="/login" method="POST">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input 
