--- a/views/main/user.hbs
+++ b/views/main/user.hbs
@@ -2,9 +2,9 @@
     <div class="col-xs-12 col-md-6">
         <div class="headline">
             <h2>{{ foundUser.name }}</h2>            
-            <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="150">
+            <img class="rounded-circle" src="/uploads/{{ foundUser.profilePic }}" height="150">
             {{#if currentUser}}
-
+                <p class="mt-3"><a href="/update-profile" class="btn btn-primary">Update Profile</a></p>
             {{else}}
                 <input type="hidden" id="user_id" value="{{ foundUser.id }}">
                 {{#if follower}}
@@ -31,7 +31,7 @@
                 {{#each tweets}}
                 <div class="card mb-3">
                     <div class="card-body d-flex align-items-center">
-                        <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="75"
+                        <img class="rounded-circle" src="/uploads/{{ author.profilePic }}" height="75"
                             width="75" alt="">
                         <div class="ml-3">
                             <h5 class="card-title">{{ author.name }}</h5>
@@ -46,8 +46,7 @@
                 {{#each foundUser.following}}
                 <div class="card mb-3">
                     <div class="card-body d-flex align-items-center">
-                        <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="75"
-                            width="75" alt="">
+                        <a href="/user/{{ _id }}"><img class="rounded-circle" src="/uploads/{{ profilePic }}" height="75" width="75" alt=""></a>
                         <div class="ml-3">
                             <h5 class="card-title">{{ name }}</h5>
                         </div>
@@ -59,8 +58,7 @@
                     {{#each foundUser.followers}}
                     <div class="card mb-3">
                         <div class="card-body d-flex align-items-center">
-                            <img class="rounded-circle" src="http://www.britishcastle.club/wp-content/uploads/2017/06/sample-customer-photo2.jpg" height="75"
-                                width="75" alt="">
+                            <a href="/user/{{ _id }}"><img class="rounded-circle" src="/uploads/{{ profilePic }}" height="75" width="75" alt=""></a>
                             <div class="ml-3">
                                 <h5 class="card-title">{{ name }}</h5>
                             </div>
