--- a/views/account/login.hbs
+++ b/views/account/login.hbs
@@ -28,6 +28,10 @@
                 class="form-control">
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
+            <div class="links">
+                <a href="/reset-password" class="btn-link">Forgot password?</a>                
+                <a href="/register" class="btn-link">Register new account</a>                
+            </div>
         </form>
     </div>
 </div>
