--- a/views/account/register.hbs
+++ b/views/account/register.hbs
@@ -75,6 +75,9 @@
                 {{/each}}
             </div>
             <button type="submit" class="btn btn-primary mb-3">Register</button>
+            <div class="links">                
+                <a href="/login" class="btn-link">Already have an account?</a>                
+            </div>
         </form>
     </div>
 </div>
